...
                    ScrollView {
                        AtLeastHeight(height: viewport.size.height) {
                            player(for: currentChannel)
                        }
                    }
                    .scrollBounceBehavior(.basedOnSize)
                    .accessibilityIdentifier("player.scroll")
                }
            } else {
                // No channel playing
                VStack(spacing: 20) {
                    Image(systemName: "antenna.radiowaves.left.and.right")
                        .font(.system(size: 64, weight: .medium))
...
